fix schedual nav jump

--- a/app/styles/components/_schedule.scss
+++ b/app/styles/components/_schedule.scss
@@ -256,7 +256,7 @@ sup {
   }
 
   .schedule-nav {
-    width: 90vw;
+    width: 85vw;
   }
 }
 
